9_unix-shell/0.txt
gcc -Wall -Wextra -std=c11 -lpthread -o wish wish.c  -I.
wish.c: In function ‘catch_INT_EOF’:
wish.c:83:16: warning: implicit declaration of function ‘getline’ [-Wimplicit-function-declaration]
   83 |     ln_state = getline( &cl , &len , stdin );  // read shell line
      |                ^~~~~~~
wish.c: At top level:
wish.c:96:8: error: conflicting types for ‘parseInput’; have ‘void *(char *)’
   96 | void * parseInput(char * cl_rem){
      |        ^~~~~~~~~~
In file included from wish.c:1:
wish.h:31:7: note: previous declaration of ‘parseInput’ with type ‘void *(void *)’
   31 | void *parseInput(void *arg);  // ------------------------------- basic shell
      |       ^~~~~~~~~~
wish.c: In function ‘parseInput’:
wish.c:98:22: warning: initialization of ‘char’ from ‘char *’ makes integer from pointer without a cast [-Wint-conversion]
   98 |   const char delim = " ";
      |                      ^~~
wish.c:100:20: warning: implicit declaration of function ‘strsep’; did you mean ‘strlen’? [-Wimplicit-function-declaration]
  100 |   while ( (token = strsep(&cl_rem, delim)) != NULL) {
      |                    ^~~~~~
      |                    strlen
wish.c:100:18: warning: assignment to ‘char *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
  100 |   while ( (token = strsep(&cl_rem, delim)) != NULL) {
      |                  ^
wish.c: In function ‘searchPath’:
wish.c:110:21: warning: unused parameter ‘path’ [-Wunused-parameter]
  110 | int searchPath(char path[], char *firstArg) {
      |                ~~~~~^~~~~~
wish.c:110:35: warning: unused parameter ‘firstArg’ [-Wunused-parameter]
  110 | int searchPath(char path[], char *firstArg) {
      |                             ~~~~~~^~~~~~~~
wish.c: In function ‘redirect’:
wish.c:117:21: warning: unused parameter ‘out’ [-Wunused-parameter]
  117 | void redirect(FILE *out) {
      |               ~~~~~~^~~
wish.c: In function ‘executeCommands’:
wish.c:123:28: warning: unused parameter ‘args’ [-Wunused-parameter]
  123 | void executeCommands(char *args[], int args_num, FILE *out) {
      |                      ~~~~~~^~~~~~
wish.c:123:40: warning: unused parameter ‘args_num’ [-Wunused-parameter]
  123 | void executeCommands(char *args[], int args_num, FILE *out) {
      |                                    ~~~~^~~~~~~~
wish.c:123:56: warning: unused parameter ‘out’ [-Wunused-parameter]
  123 | void executeCommands(char *args[], int args_num, FILE *out) {
      |                                                  ~~~~~~^~~
make: *** [makefile:15: wish] Error 1
